Small change to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Prudhvi Kumar!</title>
 </head>
 <body>
-<h1>Hello Prudhvi!</h1>
+<h1>Hello Prudhvi It's a great day!</h1>
 </body>
 </html>
